<resources>
    <string name="app_name">FreeSkill</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Se connecter</string>
    <string name="button_logout">Se déconnecter</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="edit_mail">Email</string>
    <string name="edit_password">Mot de passe</string>
    <string name="email_format_error" />
    <string name="freeskill_logo">FreeSkill logo</string>
    <string name="forgotten_password">Mot de passe oublié ?</string>
    <string name="button_registration">Inscription</string>
    <string name="label_distance_max">Distance maximale</string>
    <string name="distance_max">km</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_new_match">Nouvelle affinité</string>
    <string name="label_new_message">Nouveau message</string>
    <string name="label_new_meeting">Nouvelle proposition de rendez-vous</string>
    <string name="label_reminder">Rappel de rendez-vous</string>
    <string name="label_notation">Notation après le rendez-vous</string>
    <string name="button_modify_password">Modifier le mot de passe</string>
    <string name="button_log_out">Déconnexion</string>
    <string name="button_delete_account">Supprimer le compte</string>
    <string name="label_tags_share">Je veux partager:</string>
    <string name="label_description">Description</string>
    <string name="label_tags_discover">Je cherche à découvrir:</string>
    <string name="editText_first_name">Prénom</string>
    <string name="editText_last_name">Nom</string>
    <string name="editText_email">Email</string>
    <string name="editText_password">Mot de passe</string>
    <string name="editText_password_confirmation">Confirmation du mot de passe</string>
    <string name="tag_share">Je veux partager :</string>
    <string name="tag_discover">Je veux découvrir :</string>
    <string name="swipe">Swipe</string>
    <string name="pass">Passer</string>
    <string name="meet">Rencontrer</string>
    <string name="chatList">ChatList</string>
    <string name="noMessage">Pas de conversation</string>
    <string name="days">jours</string>
    <string name="hours">heures</string>
    <string name="minutes">minutes</string>
    <!-- Button menu chat -->
    <string name="menu_chat_profil">Profil</string>
    <string name="menu_chat_mark">Noter</string>
    <string name="menu_chat_make_meets">Rendez-vous</string>
    <string name="menu_chat_delete_match">Supprimer</string>
    <string name="menu_chat_signal_profil">Signaler</string>
    <!-- Messages dialogs menu chat -->
    <string name="delete_user_dialog_name">Supprimer un match</string>
    <string name="delete_user_dialog_message">Voulez-vous supprimer votre match?</string>
    <string name="report_user_dialog_name">Signaler un match</string>
    <string name="report_user_dialog_message">Voulez-vous signaler votre match?</string>
</resources>
