<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="freeskill.app.controller.HomepageScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="227dp"
        android:layout_height="236dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/freeskill_logo"
        android:src="@drawable/freeskill_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_connection"
        android:layout_width="135dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_blue"
        android:onClick="connection"
        android:text="@string/button_send"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/email"
        android:layout_width="230dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_freeskill"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/edit_mail"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_registration" />

    <EditText
        android:id="@+id/password"
        android:layout_width="230dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_freeskill"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgotten_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_connection" />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button_blue"
        android:onClick="register"
        android:text="@string/button_registration"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</android.support.constraint.ConstraintLayout>
