<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_distance_max"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/label_distance_max"
        android:textColor="@color/color_freeskill"
        app:layout_constraintBaseline_toBaselineOf="@+id/distance_max"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distance_max"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_notifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_notifications"
        android:textColor="@color/color_freeskill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_distance" />

    <SeekBar
        android:id="@+id/seekBar_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_distance_max" />
</android.support.constraint.ConstraintLayout>