<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.test.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="227dp"
        android:layout_height="236dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/freeskill_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_freeskill"
        android:ems="10"
        android:hint="@string/edit_mail"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="213dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_freeskill"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

</android.support.constraint.ConstraintLayout>
